# flappie

./: .gitattributes  .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  LICENCE.txt  Makefile  README.md  RELEASES.md  RUNNIE.md
misc/: decode_runnie.py  parse_flipflop.py  parse_flipflop_guppy.py  parse_runlen.py  taiyaki_flipflop5_guppy.py  taiyaki_flipflop_guppy.py  taiyaki_rle.py  taiyaki_rle5.py  trace_flipflop.py  trace_requirements.txt
reads/: MINICOL228_20161012_FNFAB42578_MN17976_mux_scan_HG_52221_ch174_read172_strand.fast5  MINICOL228_20161012_FNFAB42578_MN17976_mux_scan_HG_52221_ch271_read66_strand.fast5  read_ch228_file118.fast5
reads/multi/: FAK40126_2fd3b110ca0d020049836a61f0dfb2b9983808f9_0.fast5
reads/single/: 0f776a08-1101-41d4-8097-89136494a46e.fast5  1f1a0f33-e2ac-431a-8f48-c3c687a7a7dc.fast5  b7096acd-b528-474e-a863-51295d18d3de.fast5  db6b45aa-5d21-45cf-a435-05fb8f12e839.fast5  de1508c4-755b-489e-9ffb-51af35c9a7e6.fast5
src/: decode.c  decode.h  fast5_interface.c  fast5_interface.h  flappie.c  flappie_common.c  flappie_common.h  flappie_licence.h  flappie_matrix.c  flappie_matrix.h  flappie_output.c  flappie_output.h  flappie_stdlib.h  flappie_structures.c  flappie_structures.h  layers.c  layers.h  networks.c  networks.h  nnfeatures.c  nnfeatures.h  runnie.c  sse_mathfun.h  util.c  util.h  version.h.in
src/models/: flipflop5_20200220_r103native_daa846e6.mdl  flipflop5_20200220_r941native_69216729.mdl  flipflop5_202003_r941native_5b1c1eee.mdl  flipflop5_202003_r941rna002_ff2161d3.mdl  flipflop5_r103native.h  flipflop5_r941native.h  flipflop5_r941rna002.h  flipflop_20181102_r94pcr_7bde9e1.mdl  flipflop_20181115_r941native5mC_393e3f1.mdl  flipflop_20181120_r10Cpcr_bbd80ae.mdl  flipflop_20181120_r941native5mC_6810d73.mdl  flipflop_20181120_r941native_0c96823.mdl  flipflop_20181126_r10Cpcr_0d5e817.mdl  flipflop_20181126_r941native5mC_4ad3b85.mdl  flipflop_20181126_r941native_0c96823.mdl  flipflop_20181217_r941native5mC_4ad3b85.mdl  flipflop_20190923_r941native_6918ff8.mdl  flipflop_r10Cpcr.h  flipflop_r941native.h  flipflop_r941native5mC.h  flipflop_r94pcr.h  runlength5_202020_r941native_15b326ef.mdl  runlength5_r941native.h  runlength_20181126_r941native_1b5d61b.mdl  runlength_20190210_r941native_bc2f797.mdl  runlength_20190813_r941nativeV2_9ae7663.mdl  runlength_20191204_r941nativeV2_336a05c.mdl  runlength_r941native.h  runlength_r941nativeV2.h
src/test/: Makefile  crp.py  flappie_test_runner.c  flappie_util.c  flappie_util.h  gmon.out  normalised_signal.crp  path.crp  raw_signal.crp  read_crp.c  skeleton_rgr.c  test_common.h  test_flappie_convolution.c  test_flappie_elu.c  test_flappie_matrix.c  test_flappie_signal.c  test_flappie_util.c  test_matrix.crp  test_skeleton.c  test_util.c  trimmed_signal.crp  write_random_crp.c
